syntax = "proto3";
package types;

import "file.proto";
import "service.proto";
import "service_tier.proto";
import "schedule.proto";
import "util.proto";
import "quote.proto";

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";

option go_package = "github.com/keybittech/awayto-v3/go/pkg/types";

service BookingService {
  rpc PostBooking(PostBookingRequest) returns (PostBookingResponse) {
    option (google.api.http) = {
      post: "/v1/bookings"
      body: "*"
    };
    // schedule users confirm quotes into bookings
    option (site_role) = APP_GROUP_SCHEDULES;
    option (use_tx) = true;
  }
  rpc PatchBooking(PatchBookingRequest) returns (PatchBookingResponse) {
    option (google.api.http) = {
      patch: "/v1/bookings"
      body: "*"
    };
    option (site_role) = APP_GROUP_SCHEDULES;
  }
  rpc PatchBookingRating(PatchBookingRatingRequest) returns (PatchBookingRatingResponse) {
    option (google.api.http) = {
      patch: "/v1/bookings/rating"
      body: "*"
    };
    option (site_role) = APP_GROUP_SCHEDULES;
    option (throttle) = 1;
    option (invalidates) = "GetBookingById";
  }
  rpc GetBookings(GetBookingsRequest) returns (GetBookingsResponse) {
    option (google.api.http) = {
      get: "/v1/bookings"
    };
    option (site_role) = APP_GROUP_SCHEDULES;
  }
  rpc GetBookingById(GetBookingByIdRequest) returns (GetBookingByIdResponse) {
    option (google.api.http) = {
      get: "/v1/bookings/{id}"
    };
    option (site_role) = APP_GROUP_SCHEDULES;
  }
  rpc GetBookingFiles(GetBookingFilesRequest) returns (GetBookingFilesResponse) {
    option (google.api.http) = {
      get: "/v1/bookings/{id}/files"
    };
    option (site_role) = APP_GROUP_SCHEDULES;
  }
  rpc DeleteBooking(DeleteBookingRequest) returns (DeleteBookingResponse) {
    option (google.api.http) = {
      delete: "/v1/bookings/{id}"
    };
    option (site_role) = APP_GROUP_SCHEDULES;
  }
  rpc DisableBooking(DisableBookingRequest) returns (DisableBookingResponse) {
    option (google.api.http) = {
      patch: "/v1/bookings/{id}/disable"
    };
    option (site_role) = APP_GROUP_SCHEDULES;
  }
}

message IBooking {
  string id = 1;
  int32 rating = 2;
  string slotDate = 3;
  string quoteId = 4;
  string scheduleBracketSlotId = 5;
  string tierSurveyVersionSubmissionId = 6;
  string serviceSurveyVersionSubmissionId = 7;
  string createdOn = 8;
  IQuote quote = 9;
  IService service = 10;
  IScheduleBracketSlot scheduleBracketSlot = 11;
  IServiceTier serviceTier = 12;
  string timezone = 13;
  string scheduleName = 14;
}

message PostBookingRequest {
  repeated IBooking bookings = 1 [(google.api.field_behavior) = REQUIRED];
}

message PostBookingResponse {
  repeated IBooking bookings = 1 [(google.api.field_behavior) = REQUIRED];
}

message PatchBookingRequest {
  IBooking booking = 1 [(google.api.field_behavior) = REQUIRED];
}

message PatchBookingResponse {
  bool success = 1 [(google.api.field_behavior) = REQUIRED];
}

message GetBookingsRequest {}

message GetBookingsResponse {
  repeated IBooking bookings = 1 [(google.api.field_behavior) = REQUIRED];
}

message GetBookingByIdRequest {
  string id = 1 [(google.api.field_behavior) = REQUIRED];
}

message GetBookingByIdResponse {
  IBooking booking = 1 [(google.api.field_behavior) = REQUIRED];
}

message DeleteBookingRequest {
  string id = 1 [(google.api.field_behavior) = REQUIRED];
}

message DeleteBookingResponse {
  string id = 1 [(google.api.field_behavior) = REQUIRED];
}

message DisableBookingRequest {
  string id = 1 [(google.api.field_behavior) = REQUIRED];
}

message DisableBookingResponse {
  string id = 1 [(google.api.field_behavior) = REQUIRED];
}

message GetBookingFilesRequest {
  string id = 1 [(google.api.field_behavior) = REQUIRED];
}

message GetBookingFilesResponse {
  repeated IFile files = 1 [(google.api.field_behavior) = REQUIRED];
}

message PatchBookingRatingRequest {
  string id = 1 [(google.api.field_behavior) = REQUIRED];
  int32 rating = 2 [(google.api.field_behavior) = REQUIRED];
}

message PatchBookingRatingResponse {
  bool success = 1 [(google.api.field_behavior) = REQUIRED];
}
